# hybrid-vpp-rl

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
artifacts/: anchors_v2.json  screening_table.csv  screening_table.md  test_evaluation.json
artifacts/failure_days/: day_features.csv  failure_days.json
artifacts/robust_selection/: checkpoint_matrix.csv  checkpoint_matrix.json  disagreement_analysis.json  ensemble_results.json  ensemble_weights.json  final_test_confirmation.json  fold_results.csv  lobo_results.csv  ood_analysis.json  per_day_val.csv  safety_gate_results.json  sensitivity_results.json
configs/: congested.yaml  default.yaml  ninja.yaml  synthetic_market.yaml  train_sac_hybrid.yaml  train_sac_hybrid_carryover.yaml
deploy/: hybrid-vpp-rl-supervisor.service
docs/: controllers.md  data_audit.md  index.md  limitations.md  model.md  repository_cleanup_report.md  repository_consolidation_plan.md  reproducibility.md  research_supervision.md  results.md  rl_environment.md  rl_research.md  robust_rl_research_log.md  robust_rl_research_plan.md  state_action_example_day.md  synthetic_market_data.md
docs/javascripts/: mathjax.js
examples/: quickstart.py  run_deployment_controller.py
experiments/: baseline_v1.json  diagnostics_baseline_ppo.json
reports/: checkpoint_selection_analysis.md  complete_study_summary.md  ensemble_analysis.md  failure_day_analysis.md  final_rl_results.json  final_rl_results.md  final_robust_rl_results.json  final_robust_rl_results.md  final_study_report.md  regime_analysis.md  robust_milp_analysis.md
results/: final_results.csv  final_results.json
tests/: conftest.py
tests/integration/: test_controllers.py  test_env.py  test_simulator_episode.py  test_synthetic_pipeline.py
tests/leakage/: test_no_lookahead.py
tests/unit/: test_action_modes.py  test_battery.py  (+16 more)
(+60 files in other folders)
